Bug 437831 - File format is not automatically detected when exporting through native file dialogs
Summary: File format is not automatically detected when exporting through native file ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.4.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-29 15:13 UTC by Raghavendra kamath
Modified: 2021-09-09 13:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2021-05-29 15:13:00 UTC
SUMMARY
I am using the repository version, While the option use native file dialog is on in the setting. The export dialog has only .exr selected for the export format, even though all supported format is in the dropdown. It doesn't automatically select relevant file format when I type it explicitly.

STEPS TO REPRODUCE
1. Open Krita 4.4.3 repository version (I am on fedora) enable the use native file dialog in the settings. It is in general > miscellaneous tab 
2. Open a new document, then initiate the export dialog
3. Write the filename with extension "example.jpg" notice the file format shown in the dropdown s still exr. If you go ahead with the export it will show you the option for exr format.

OBSERVED RESULT
Export file dialog (native one) doesn't detect file format in name

EXPECTED RESULT
The export should be automatically done in the typed file format

SOFTWARE/OS VERSIONS
Operating System: Fedora 34
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Kernel Version: 5.12.7-300.fc34.x86_64
OS Type: 64-bit
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-4790K CPU @ 4.00GHz
Memory: 31.3 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 750 Ti/PCIe/SSE2


Krita

 Version: 4.4.3-beta1
 Languages: en_IN, en
 Hidpi: true

Qt

  Version (compiled): 5.15.2
  Version (loaded): 5.15.2

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.12.7-300.fc34.x86_64
  Pretty Productname: Fedora 34 (KDE Plasma)
  Product Type: fedora
  Product Version: 34
  Desktop: KDE

OpenGL Info
 
  Vendor:  "NVIDIA Corporation" 
  Renderer:  "NVIDIA GeForce GTX 750 Ti/PCIe/SSE2" 
  Version:  "4.6.0 NVIDIA 465.31" 
  Shading language:  "4.60 NVIDIA" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
     Version: 4.6
     Supports deprecated functions true 
     is OpenGL ES: false 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false 

Hardware Information

  GPU Acceleration: auto
  Memory: 32046 Mb
  Number of Cores: 8
  Swap Location: /tmp

Current Settings

  Current Swap Location: /tmp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Use AMD Vectorization Workaround: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 900
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Display Information
Number of screens: 1
	Screen: 0
		Name: DVI-D-0
		Depth: 24
		Scale: 1
		Resolution in pixels: 2560x1440
		Manufacturer: BNQ
		Model: BenQ SW2700-
		Refresh Rate: 59.9506
Comment 1 wolthera 2021-09-09 13:00:49 UTC
Can you still reproduce this? Halla fixed something a few days ago...
Comment 2 Halla Rempt 2021-09-09 13:20:59 UTC
Git commit 8141535c0450ec62d24923973a6b634775ccb4e2 by Halla Rempt.
Committed on 09/09/2021 at 13:20.
Pushed by rempt into branch 'master'.

Make sure that *.kra is the first item in "All Supported"
Related: bug 442116

M  +5    -19   libs/widgetutils/KoFileDialog.cpp

https://invent.kde.org/graphics/krita/commit/8141535c0450ec62d24923973a6b634775ccb4e2
Comment 3 Halla Rempt 2021-09-09 13:22:09 UTC
Git commit 4c6899cbeff9c64f5c513d7e234f565e75f1ad70 by Halla Rempt.
Committed on 09/09/2021 at 13:21.
Pushed by rempt into branch 'krita/5.0'.

Make sure that *.kra is the first item in "All Supported"
Related: bug 442116
(cherry picked from commit 8141535c0450ec62d24923973a6b634775ccb4e2)

M  +5    -19   libs/widgetutils/KoFileDialog.cpp

https://invent.kde.org/graphics/krita/commit/4c6899cbeff9c64f5c513d7e234f565e75f1ad70