Make sure that *.kra is the first item in "All Supported"

BUG:437831
BUG:442116